manifests/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wx-api-gateway
  namespace: default
spec:
  selector:
    istio: <tag_value>
  servers:
  - hosts:
    - "wx-api.brainstation-23.com"
    - "zipkin.brainstation-23.com"
    - "grafana.brainstation-23.com"
    port:
      name: https-istio-tls
      number: 443
      protocol: HTTPS
    tls:
      credentialName: <certificate-object>
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
